# qtz-data

./: CMakeLists.txt  QtzData.pc.in  QtzData.qrc  QtzData.rc  data-provider-information.cpp  data-provider-information.hpp  data.hpp  data.pro  database-pool.hpp  jalali-table-model.cpp
async/: database-connection.cpp  database-exception.cpp  database-exception.hpp  model-register.cpp  model-register.hpp  query-request.cpp  query-request.hpp  query-result.cpp  query-result.hpp  query-thread.cpp  query-worker.cpp  query-worker.hpp  sql-table-model.cpp
cmake/: QtzDataConfig.cmake
include/: data-provider-information.hpp  i-edit-record.h  jalali-table-model.hpp  table-node.hpp
include/async/: database-connection.hpp  database-exception.hpp  query-thread.hpp  sql-table-model.hpp
resources/: QtzData.qrc  database-providers_fa.xml
src/: data-provider-information.cpp  i-insert-record.cpp
src/async/: database-connection.cpp  database-exception.cpp  model-register.cpp  query-request.cpp  query-result.cpp  query-thread.cpp  query-worker.cpp  sql-table-model.cpp
